Added Gradle support, wrote 2 test cases, will be back to add more relevant test cases

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("./ip/src/main/java/gabriel/Gabriel.java")
 }
 
 shadowJar {
