--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@ plugins {
     id 'application'
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'checkstyle'
+}
+
+checkstyle {
+    toolVersion = '11.0.0'
+    configFile = file("./config/checkstyle/checkstyle.xml")
 }
 
 javafx {
@@ -36,9 +42,24 @@ application {
     mainClass.set("gabriel.Launcher")
 }
 
+jar {
+    manifest {
+        attributes'Main-Class':application.mainClass.get()
+    }
+}
+
 shadowJar {
-    archiveBaseName = "duke"
-    archiveClassifier = null
+    archiveBaseName.set("ip")
+    archiveClassifier.set("")
+    archiveVersion.set("")
+
+    manifest{
+        attributes "Main-Class":application.mainClass.get()
+    }
+}
+
+tasks.build {
+    dependsOn tasks.shadowJar
 }
 
 run{
